<?xml version="1.0"?>
<package format="3">
  <name>jnmouse_description</name>
  <version>0.0.0</version>
  <description>The jnmouse_description package</description>

  <maintainer email="support@rt-net.jp">RT Corporation</maintainer>
  <author email="daisuke.sato@rt-net.jp">Daisuke Sato</author>

  <license>Apache-2.0</license>

  <url type="website">https://github.com/rt-net/jnmouse_sim/wiki</url>
  <url type="repository">https://github.com/rt-net/jnmouse_description</url>
  <url type="bugtracker">https://github.com/rt-net/jnmouse_description/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>

  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
